# synaps-ui

./: .gitignore  README.rst  setup.cfg  setup.py
synapsdashboard/: dashboard.py
synapsdashboard/alarms/: panel.py  tables.py  urls.py  views.py
synapsdashboard/alarms/templates/alarms/: _create.html  create.html  index.html
synapsdashboard/api/: synaps.py
synapsdashboard/api/_synaps/: __init__.py
synapsdashboard/metrics/: panel.py  tables.py  views.py
synapsdashboard/metrics/templates/metrics/: index.html
synapsdashboard/overview/: panel.py  tables.py  views.py
synapsdashboard/overview/templates/overview/: index.html
synapsdashboard/projects/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
synapsdashboard/projects/alarms/: tables.py  urls.py
synapsdashboard/projects/metrics/: tables.py  tests.py  views.py
synapsdashboard/projects/templates/projects/: _graph.html  _monitoring_alarms.html  graph.html  index.html  monitoring.html
synapsdashboard/reports/: panel.py  tables.py  tests.py  views.py
synapsdashboard/reports/templates/reports/: index.html
synapsdashboard/static/synapsdashboard/css/: synapsdashboard.css
synapsdashboard/static/synapsdashboard/js/: synapsdashboard.js
synapsdashboard/templates/synapsdashboard/: base.html
