[metadata]
name = synaps-dashboard
version = 2014.1
summary = Synaps dashboard
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/synaps

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    synapsdashboard

